<resources>
    <string name="app_name">TaskTracker</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="hint_username">Enter Username</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_email">Enter Email</string>
    <string name="Task_list">Task List</string>
    <string name="hint_rePass">re-enter password</string>
    <string name="hint_create_user">Create Username</string>
</resources>