<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCCBCB"
    android:backgroundTint="#DCCBCB"
    tools:context=".RegisterFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/Register"
        android:textColor="#F8F5F5"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailE"
        android:layout_width="249dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/hint_username"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/passE"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/emailE"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="@+id/emailE"
        app:layout_constraintTop_toBottomOf="@+id/emailE" />

    <EditText
        android:id="@+id/passcheckE"
        android:layout_width="252dp"
        android:layout_height="56dp"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/hint_rePass"
        android:inputType="textPassword"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/passE"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passE"
        app:layout_constraintTop_toTopOf="@+id/passE" />

    <Button
        android:id="@+id/register1B"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:backgroundTint="#E3DCDC"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/Register"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passcheckE" />

    <EditText
        android:id="@+id/UserNameE"
        android:layout_width="256dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/hint_create_user"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/passcheckE"
        app:layout_constraintStart_toStartOf="@+id/passcheckE"
        app:layout_constraintTop_toBottomOf="@+id/passcheckE" />

</androidx.constraintlayout.widget.ConstraintLayout>