<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:hapticFeedbackEnabled="false"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="184dp"
        android:layout_height="67dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/Login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userIdT"
        android:layout_width="280dp"
        android:layout_height="59dp"
        android:layout_marginTop="76dp"
        android:background="@color/white"
        android:backgroundTint="#EFEAEA"
        android:ems="10"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/hint_username"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/loginB"
        style="@style/Widget.Material3.Button"
        android:layout_width="128dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="#E3DCDC"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/Login"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/registerB"
        app:layout_constraintEnd_toStartOf="@+id/registerB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passET" />

    <Button
        android:id="@+id/registerB"
        style="@style/Widget.Material3.Button.TextButton.Dialog.Flush"
        android:layout_width="142dp"
        android:layout_height="59dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#E3DCDC"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/Register"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passET" />

    <EditText
        android:id="@+id/passET"
        android:layout_width="277dp"
        android:layout_height="61dp"
        android:layout_marginTop="52dp"
        android:background="@color/white"
        android:backgroundTint="#EFEAEA"
        android:ems="10"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/userIdT"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userIdT"
        app:layout_constraintTop_toBottomOf="@+id/userIdT" />

    <!--    <View-->
    <!--        android:id="@+id/divider3"-->
    <!--        android:layout_width="409dp"-->
    <!--        android:layout_height="1dp"-->
    <!--        android:background="?android:attr/listDivider"-->
    <!--        tools:layout_editor_absoluteX="1dp"-->
    <!--        tools:layout_editor_absoluteY="39dp" />-->

    <!--    <View-->
    <!--        android:id="@+id/divider5"-->
    <!--        android:layout_width="409dp"-->
    <!--        android:layout_height="1dp"-->
    <!--        android:background="?android:attr/listDivider"-->
    <!--        tools:layout_editor_absoluteX="1dp"-->
    <!--        tools:layout_editor_absoluteY="639dp" />-->

</androidx.constraintlayout.widget.ConstraintLayout>